--- a/css/main.css
+++ b/css/main.css
@@ -65,11 +65,9 @@ img {
   overflow: hidden;
 }
 
-@media screen and (min-width: 480px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -82,8 +80,8 @@ img {
 .container {
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+  width: 100%;
 }
 
 @media screen and (min-width: 480px) {
@@ -113,18 +111,11 @@ img {
 .container-header {
   display: flex;
   align-items: center;
-}
-
-@media screen and (min-width: 480px) {
-  .container-header {
-    max-width: 480px;
-    height: 60px;
-  }
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 768px) {
   .container-header {
-    max-width: 768px;
     height: 80px;
   }
 }
@@ -193,16 +184,10 @@ img {
   font-family: Raleway;
   font-weight: bold;
   color: var(--hover-color);
-}
-
-@media screen and (min-width: 480px) {
-  .header-logo {
-    font-size: 24px;
-    line-height: 1.16;
-    /* identical to box height */
-    margin-left: 0px;
-    margin-right: 276px;
-  }
+  font-size: 24px;
+  line-height: 1.16;
+  /* identical to box height */
+  margin-left: 0px;
 }
 
 @media screen and (min-width: 768px) {
@@ -231,10 +216,8 @@ img {
   color: var(--back-color);
 }
 
-@media screen and (min-width: 480px) {
-  .header__list--too {
-    display: none;
-  }
+.header__list--too {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -254,13 +237,18 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .header-item-too:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
 .header-mail {
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--contact-color);
   display: flex;
   align-items: center;
-  margin-right: 30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -352,13 +340,17 @@ img {
 }
 
 .mobile-button {
-  width: 40px;
-  height: 40px;
   display: inline-flex;
   margin: 0;
   padding: 0;
   border: none;
   background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-button {
+    display: none;
+  }
 }
 
 .mobile-button:hover, .mobile-button:focus {
@@ -400,12 +392,6 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-@media screen and (min-width: 768px) {
-  .mob-menu {
-    display: none;
-  }
 }
 
 .mob-menu-link {
@@ -475,23 +461,17 @@ img {
 
 .studio {
   background-color: var(--title-back-color);
+  padding-top: 118px;
+  padding-bottom: 118px;
+  height: 400px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/header-img-mob-1x.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
 }
 
-@media screen and (min-width: 480px) {
-  .studio {
-    padding-top: 118px;
-    padding-bottom: 118px;
-    max-width: 480px;
-    height: 400px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/header-img-mob-1x.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .studio {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/header-img-mob-2x.jpg);
   }
@@ -499,7 +479,6 @@ img {
 
 @media screen and (min-width: 768px) {
   .studio {
-    max-width: 768px;
     height: 400px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/header-img-tab-1x.jpg);
     background-repeat: no-repeat;
@@ -544,20 +523,15 @@ img {
 }
 
 .studio__title {
+  width: 360px;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.62;
+  /* or 162% */
+  margin-bottom: 30px;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--title-studio-color);
-}
-
-@media screen and (min-width: 480px) {
-  .studio__title {
-    width: 360px;
-    font-weight: 900;
-    font-size: 26px;
-    line-height: 1.62;
-    /* or 162% */
-    margin-bottom: 40px;
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -568,7 +542,6 @@ img {
     line-height: 1.36;
     /* or 136% */
     text-align: center;
-    margin-bottom: 30px;
   }
 }
 
@@ -696,13 +669,14 @@ img {
   }
 }
 
-.work {
-  display: none;
+@media screen and (max-width: 1200px) {
+  .work {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .work {
-    display: inline;
     padding-top: 0px;
   }
 }
@@ -803,11 +777,21 @@ img {
 }
 
 .team__title {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.16;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+  /* identical to box height */
   text-align: center;
-  margin-bottom: 50px;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .team__item-content {
@@ -870,14 +854,22 @@ img {
 }
 
 .client__title {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.16;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+  /* identical to box height */
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--base-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .client__title {
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .client__list {
@@ -887,6 +879,7 @@ img {
 }
 
 .client-item {
+  width: 210px;
   height: 92px;
   border: 1px solid var(--social-icon-color);
   box-sizing: border-box;
@@ -895,12 +888,6 @@ img {
   justify-content: center;
   align-items: center;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 480px) {
-  .client-item {
-    width: 210px;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -930,19 +917,34 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 768px) {
-  .client__link {
-    margin-left: 30px;
-    margin-bottom: 30px;
-    width: calc(100% / 3 -30px);
+.client__link {
+  margin-left: 30px;
+  width: calc(100% / 2 -30px);
+}
+
+.client__link:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+  .client__link:nth-child(n + 5) {
+    margin-bottom: 0px;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .client__link {
     margin-left: 30px;
-    margin-bottom: 30px;
-    width: calc(100% / 2 -30px);
+    width: calc(100% / 3 -30px);
+  }
+  .client__link:nth-child(n + 3) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client__link {
+    margin-bottom: 0px;
   }
 }
 
@@ -952,14 +954,6 @@ img {
   padding-bottom: 60px;
 }
 
-@media screen and (min-width: 480px) {
-  .footer {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .footer {
     display: flex;
@@ -967,10 +961,8 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
-  .container__footer {
-    text-align: center;
-  }
+.container__footer {
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -983,7 +975,6 @@ img {
 
 @media screen and (min-width: 1200px) {
   .container__footer {
-    max-width: 1600px;
     display: flex;
     align-items: baseline;
     flex-wrap: nowrap;
@@ -999,7 +990,7 @@ img {
   margin-top: 9px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 768px) {
   .left-block {
     margin-bottom: 60px;
   }
@@ -1008,7 +999,6 @@ img {
 @media screen and (min-width: 768px) {
   .left-block {
     flex-direction: column;
-    margin-right: 165px;
   }
 }
 
@@ -1080,25 +1070,20 @@ img {
 @media screen and (min-width: 768px) {
   .footer-tablet {
     display: flex;
+    justify-content: space-around;
     align-items: center;
+    width: 100%;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .footer-tablet {
-    flex: none;
     margin-left: 0px;
     margin-right: 93px;
   }
 }
 
 /*----------SOСIAL------------*/
-@media screen and (min-width: 768px) {
-  .net {
-    margin-bottom: 60px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .net {
     margin-bottom: 0;
@@ -1116,6 +1101,11 @@ img {
   margin-bottom: 20px;
 }
 
+.net__list {
+  display: flex;
+  justify-content: center;
+}
+
 @media screen and (min-width: 1200px) {
   .net__list {
     display: flex;
@@ -1128,13 +1118,6 @@ img {
   .net__list {
     display: flex;
     align-items: center;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .net__list {
-    display: flex;
-    justify-content: center;
   }
 }
 
@@ -1168,6 +1151,10 @@ img {
 }
 
 /*----------SUBSCRIPT------------*/
+.subscrip {
+  margin-top: 60px;
+}
+
 @media screen and (min-width: 1200px) {
   .subscrip {
     margin-left: auto;
@@ -1186,6 +1173,8 @@ img {
 }
 
 .subscrip__mail {
+  width: 450px;
+  margin-bottom: 20px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -1202,19 +1191,6 @@ img {
   outline: none;
 }
 
-@media screen and (min-width: 480px) {
-  .subscrip__mail {
-    width: 450px;
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .subscrip__mail {
-    width: 450px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .subscrip__mail {
     width: 358px;
@@ -1225,19 +1201,13 @@ img {
 
 .subscrip__form {
   display: flex;
-}
-
-@media screen and (min-width: 480px) {
-  .subscrip__form {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
   .subscrip__form {
     flex-direction: column;
-    align-items: center;
   }
 }
 
@@ -1271,17 +1241,13 @@ img {
 
 .subscrip-icon {
   margin-left: 10px;
+  fill: var(--title-studio-color);
 }
 
 .menu {
   display: flex;
-  padding-bottom: 0px;
-}
-
-@media screen and (min-width: 480px) {
-  .menu {
-    flex-wrap: wrap;
-  }
+  flex-wrap: wrap;
+  margin-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1319,10 +1285,8 @@ img {
   margin-bottom: 15px;
 }
 
-@media screen and (min-width: 480px) {
-  .bedge {
-    margin-bottom: -30px;
-  }
+.bedge {
+  margin-bottom: -30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1339,13 +1303,8 @@ img {
   width: 100%;
   height: 100%;
   background: var(--title-studio-color);
-}
-
-@media screen and (min-width: 480px) {
-  .bedge__list {
-    width: 450px;
-    margin-bottom: 30px;
-  }
+  width: 450px;
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1386,6 +1345,8 @@ img {
   position: absolute;
   top: 0;
   left: 0;
+  padding-top: 77px;
+  padding-bottom: 77px;
   padding-left: 24px;
   padding-right: 24px;
   background: rgba(33, 150, 243, 0.9);
@@ -1398,13 +1359,6 @@ img {
   color: var(--title-studio-color);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 480px) {
-  .imeges-text {
-    padding-top: 77px;
-    padding-bottom: 77px;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1455,10 +1409,11 @@ img {
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 2%;
 }
 
 .modal {
-  width: 450px;
+  width: 100%;
   min-height: 609px;
   background: var(--title-studio-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1468,6 +1423,12 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
