--- a/scss/base/container.scss
+++ b/scss/base/container.scss
@@ -1,15 +1,15 @@
 .container {
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  @media screen and (min-width: 480px) {
+  margin: 0 auto;
+  width: 100%;
+  @include mob {
     width: 480px;
   }
-  @media screen and (min-width: 768px) {
+  @include tab {
     width: 768px;
   }
-  @media screen and (min-width: 1200px) {
+  @include desk {
     width: 1200px;
     max-width: 100%;
   }
