--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -1,12 +1,16 @@
 .client__title {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.16;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18; /* identical to box height */
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--base-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @include desk {
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .client__list {
@@ -16,13 +20,11 @@
 }
 
 .client-item {
-  @media screen and (min-width: 480px) {
-    width: 210px;
-  }
-  @media screen and (min-width: 768px) {
+  width: 210px;
+  @include tab {
     width: 226px;
   }
-  @media screen and (min-width: 1200px) {
+  @include desk {
     width: 170px;
   }
   height: 92px;
@@ -50,14 +52,25 @@
 }
 
 .client__link {
-  @media screen and (min-width: 768px) {
-    margin-left: 30px;
+  margin-left: 30px;
+  &:not(:last-child) {
     margin-bottom: 30px;
-    width: calc(100% / 3 -30px);
   }
-  @media screen and (min-width: 480px) {
+  width: calc(100% / 2 -30px);
+
+  @media screen and (min-width: 480px) and (max-width: 768px) {
+    &:nth-child(n + 5) {
+      margin-bottom: 0px;
+    }
+  }
+  @include tab {
     margin-left: 30px;
-    margin-bottom: 30px;
-    width: calc(100% / 2 -30px);
+    width: calc(100% / 3 -30px);
+    &:nth-child(n + 3) {
+      margin-bottom: 0px;
+    }
+  }
+  @include desk {
+    margin-bottom: 0px;
   }
 }
