--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -6,13 +6,8 @@
 .container-header {
   display: flex;
   align-items: center;
-
-  @include mob {
-    max-width: 480px;
-    height: 60px;
-  }
+  justify-content: space-between;
   @include tab {
-    max-width: 768px;
     height: 80px;
   }
   @include desk {
@@ -70,14 +65,10 @@
 .header-logo {
   font-family: Raleway;
   font-weight: bold;
-
   color: var(--hover-color);
-  @include mob {
-    font-size: 24px;
-    line-height: 1.16; /* identical to box height */
-    margin-left: 0px;
-    margin-right: 276px;
-  }
+  font-size: 24px;
+  line-height: 1.16; /* identical to box height */
+  margin-left: 0px;
   @include tab {
     font-size: 24px;
     line-height: 1.16; /* identical to box height */
@@ -98,9 +89,7 @@
 }
 
 .header__list--too {
-  @include mob {
-    display: none;
-  }
+  display: none;
   @include tab {
     display: flex;
     align-items: center;
@@ -114,6 +103,13 @@
   }
 }
 
+.header-item-too {
+  @include desk {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
 .header-mail {
   font-weight: 500;
   @include tab {
@@ -130,7 +126,6 @@
   color: var(--contact-color);
   display: flex;
   align-items: center;
-  margin-right: 30px;
   &:hover,
   &:focus {
     color: var(--hover-color);
@@ -198,13 +193,14 @@
 }
 
 .mobile-button {
-  width: 40px;
-  height: 40px;
   display: inline-flex;
   margin: 0;
   padding: 0;
   border: none;
   background-color: transparent;
+  @include tab {
+    display: none;
+  }
   &:hover,
   &:focus {
     fill: var(--hover-color);
@@ -244,9 +240,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
-  @include tab {
-    display: none;
   }
 }
 
