--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -5,11 +5,15 @@
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 2%;
 }
 
 .modal {
-  width: 450px;
+  width: 100%;
   min-height: 609px;
+  @include mob {
+    width: 450px;
+  }
   @include desk {
     width: 528px;
     min-height: 581px;
