--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -42,11 +42,17 @@
 }
 
 .team__title {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.16;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18; /* identical to box height */
   text-align: center;
-  margin-bottom: 50px;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+  @include desk {
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .team__item-content {
