--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -178,6 +178,7 @@
   }
   @include desk {
     margin-left: auto;
+    margin-top: 0px;
   }
 }
 
@@ -219,10 +220,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 
   @include tab {
     flex-direction: column;
-    align-items: center;
   }
   @include desk {
     flex-wrap: nowrap;
