--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -220,10 +220,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
 
-  @include tab {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     flex-direction: column;
+    align-items: center;
   }
   @include desk {
     flex-wrap: nowrap;
