--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -221,7 +221,7 @@
   flex-wrap: wrap;
   justify-content: center;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     flex-direction: column;
     align-items: center;
   }
