--- a/css/main.css
+++ b/css/main.css
@@ -669,7 +669,7 @@ img {
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .work {
     display: none;
   }
@@ -990,7 +990,7 @@ img {
   margin-top: 9px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .left-block {
     margin-bottom: 60px;
   }
@@ -1073,6 +1073,7 @@ img {
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    margin-bottom: 60px;
   }
 }
 
@@ -1080,6 +1081,7 @@ img {
   .footer-tablet {
     margin-left: 0px;
     margin-right: 93px;
+    margin-bottom: 0px;
   }
 }
 
@@ -1151,13 +1153,10 @@ img {
 }
 
 /*----------SUBSCRIPT------------*/
-.subscrip {
-  margin-top: 60px;
-}
-
 @media screen and (min-width: 1200px) {
   .subscrip {
     margin-left: auto;
+    margin-top: 0;
   }
 }
 
@@ -1205,9 +1204,10 @@ img {
   justify-content: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1199px) {
   .subscrip__form {
     flex-direction: column;
+    align-items: center;
   }
 }
 
