--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  width: 100%;
+  max-width: 100%;
 }
 
 @media screen and (min-width: 480px) {
@@ -453,10 +453,10 @@ img {
   color: var(--hover-color);
 }
 
-.mob-menu-social-line {
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  margin-left: 10px;
+.mob-menu-social-item:not(:last-child) {
   margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .studio {
@@ -479,12 +479,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .studio {
-    height: 400px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/header-img-tab-1x.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin: 0 auto;
   }
 }
 
@@ -501,10 +496,6 @@ img {
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/header-img-desk-1x.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin: 0 auto;
   }
 }
 
@@ -529,6 +520,7 @@ img {
   line-height: 1.62;
   /* or 162% */
   margin-bottom: 30px;
+  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--title-studio-color);
@@ -541,7 +533,6 @@ img {
     font-size: 44px;
     line-height: 1.36;
     /* or 136% */
-    text-align: center;
   }
 }
 
@@ -875,11 +866,16 @@ img {
 .client__list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .client__list {
+    margin-left: -30px;
+  }
 }
 
 .client-item {
-  width: 210px;
   height: 92px;
   border: 1px solid var(--social-icon-color);
   box-sizing: border-box;
@@ -888,18 +884,6 @@ img {
   justify-content: center;
   align-items: center;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 768px) {
-  .client-item {
-    width: 226px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .client-item {
-    width: 170px;
-  }
 }
 
 .client-item:hover, .client-item:focus {
@@ -918,34 +902,43 @@ img {
 }
 
 .client__link {
-  margin-left: 30px;
-  width: calc(100% / 2 -30px);
-}
-
-.client__link:not(:last-child) {
+  width: 210px;
+  height: 92px;
   margin-bottom: 30px;
-}
-
-@media screen and (min-width: 480px) and (max-width: 768px) {
-  .client__link:nth-child(n + 5) {
-    margin-bottom: 0px;
-  }
+  width: calc(100% / 2 - 30px);
 }
 
 @media screen and (min-width: 768px) {
   .client__link {
-    margin-left: 30px;
-    width: calc(100% / 3 -30px);
+    width: 226px;
+    width: calc(100% / 3 - 30px);
   }
-  .client__link:nth-child(n + 3) {
+  .client__link:not(:nth-child(3n + 1)) {
+    margin-left: 30px;
+  }
+  .client__link:nth-child(n + 4) {
     margin-bottom: 0px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .client__link {
+    width: 170px;
     margin-bottom: 0px;
   }
+  .client__link:not(:first-child) {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .client__link:nth-child(2n) {
+    margin-left: 30px;
+  }
+}
+
+.client__link:nth-child(n + 5) {
+  margin-bottom: 0px;
 }
 
 .footer {
@@ -1161,6 +1154,7 @@ img {
 }
 
 .subscrip__title {
+  width: 100%;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -1172,7 +1166,7 @@ img {
 }
 
 .subscrip__mail {
-  width: 450px;
+  width: 100%;
   margin-bottom: 20px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1188,6 +1182,12 @@ img {
   color: rgba(255, 255, 255, 0.6);
   padding-left: 16px;
   outline: none;
+}
+
+@media screen and (min-width: 768px) {
+  .subscrip__mail {
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1219,7 +1219,7 @@ img {
 }
 
 .subscrip__buttom {
-  width: 200px;
+  max-width: 200px;
   height: 50px;
   display: flex;
   justify-content: center;
@@ -1303,7 +1303,7 @@ img {
   width: 100%;
   height: 100%;
   background: var(--title-studio-color);
-  width: 450px;
+  max-width: 450px;
   margin-bottom: 30px;
 }
 
