--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -16,17 +16,13 @@
 .client__list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
+  justify-content: center;
+  @include desk {
+    margin-left: -30px;
+  }
 }
 
 .client-item {
-  width: 210px;
-  @include tab {
-    width: 226px;
-  }
-  @include desk {
-    width: 170px;
-  }
   height: 92px;
   border: 1px solid var(--social-icon-color);
   box-sizing: border-box;
@@ -52,25 +48,33 @@
 }
 
 .client__link {
-  margin-left: 30px;
-  &:not(:last-child) {
-    margin-bottom: 30px;
-  }
-  width: calc(100% / 2 -30px);
-
-  @media screen and (min-width: 480px) and (max-width: 768px) {
-    &:nth-child(n + 5) {
-      margin-bottom: 0px;
-    }
-  }
+  width: 210px;
   @include tab {
-    margin-left: 30px;
-    width: calc(100% / 3 -30px);
-    &:nth-child(n + 3) {
+    width: 226px;
+    &:not(:nth-child(3n + 1)) {
+      margin-left: 30px;
+    }
+    width: calc(100% / 3 - 30px);
+    &:nth-child(n + 4) {
       margin-bottom: 0px;
     }
   }
   @include desk {
+    width: 170px;
+    margin-bottom: 0px;
+    &:not(:first-child) {
+      margin-left: 30px;
+    }
+  }
+  height: 92px;
+  @media screen and (max-width: 767px) {
+    &:nth-child(2n) {
+      margin-left: 30px;
+    }
+  }
+  margin-bottom: 30px;
+  width: calc(100% / 2 - 30px);
+  &:nth-child(n + 5) {
     margin-bottom: 0px;
   }
 }
