--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -182,6 +182,7 @@
 }
 
 .subscrip__title {
+  width: 100%;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -193,8 +194,11 @@
 }
 
 .subscrip__mail {
-  width: 450px;
+  width: 100%;
   margin-bottom: 20px;
+  @include tab {
+    width: 450px;
+  }
   @include desk {
     width: 358px;
     margin-left: 0;
@@ -219,7 +223,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
   @media screen and (max-width: 1199px) {
     flex-direction: column;
     align-items: center;
@@ -231,7 +234,7 @@
 }
 
 .subscrip__buttom {
-  width: 200px;
+  max-width: 200px;
   height: 50px;
   display: flex;
   justify-content: center;
