--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -301,8 +301,8 @@
   color: var(--hover-color);
 }
 
-.mob-menu-social-line {
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  margin-left: 10px;
+.mob-menu-social-item:not(:last-child) {
   margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
